# catchall-api-rs

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md
src/: logging.rs  main.rs
