[package]
name = "catchall-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix-web = "4"
base64 = "0.21.0"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
