[package]
name = "catchall-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix-web = "4"
base64 = "0.21.0"
log = "0.4.17"
log-rs = { git = "ssh://git@gitea.acidrain.duckdns.org:10022/mathieu/log-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
rstest = "0.17.0"

[profile.release]
strip="debuginfo"
